Add project metadata, make sure CodeGen is built, but don't copy assemblies

--- a/UAssetAPI-DNNE.CodeGen/UAssetAPI-DNNE.CodeGen.csproj
+++ b/UAssetAPI-DNNE.CodeGen/UAssetAPI-DNNE.CodeGen.csproj
@@ -6,6 +6,11 @@
         <RootNamespace>UAssetAPI_DNNE.CodeGen</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Title>UAssetAPI-DNNE.CodeGen</Title>
+        <Authors>Tuomo Kriikkula</Authors>
+        <Description>Code generation tool for the UAssetAPI-DNNE project.</Description>
+        <Copyright>Copyright © Tuomo Kriikkula 2025</Copyright>
+        <PackageProjectUrl>https://github.com/tuokri/UAssetAPI-DNNE</PackageProjectUrl>
     </PropertyGroup>
 
     <ItemGroup>
