--- a/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
+++ b/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
@@ -12,6 +12,7 @@
         <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
         <FileVersion>1.0.0.0</FileVersion>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 
         <DnneBuildExports>true</DnneBuildExports>
         <EnableDynamicLoading>true</EnableDynamicLoading>
