--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           cache: true
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Display dotnet version
         run: dotnet --version
