--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -31,10 +31,12 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           cache: true
-          cache-dependency-path: '**/package-lock.json'
+          cache-dependency-path: "UAssetAPI-DNNE/packages.lock.json"
 
       - name: Display dotnet version
         run: dotnet --version
+
+      - run: dotnet restore --locked-mode
 
       - run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
         if: ${{ (matrix.os == 'windows-latest') && (matrix.forced_runtime_identifier) != 'win-x64' }}
