Fix bad matrix var usage

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: UAssetAPI-DNNE-${{ matrix.os }}-${{ matrix.configuration }}-${{ forced_runtime_identifier }}
+          name: UAssetAPI-DNNE-${{ matrix.os }}-${{ matrix.configuration }}-${{ matrix.forced_runtime_identifier }}
           path: |
             UAssetAPI-DNNE/bin
             UAssetAPI-DNNE/obj
