--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -10,9 +10,6 @@ on:
 
 jobs:
   build:
-    env:
-      DNNE_BUILD_EXPORTS: true
-
     strategy:
       fail-fast: false
       matrix:
@@ -43,6 +40,9 @@ jobs:
 
       - run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
         if: ${{ (matrix.os == 'ubuntu-latest') && (matrix.forced_runtime_identifier != 'linux-x64') }}
+
+      - run: echo "DNNE_BUILD_EXPORTS=true" >> $GITHUB_ENV
+        if: ${{ env.DNNE_BUILD_EXPORTS == '' || env.DNNE_BUILD_EXPORTS == null }}
 
       - name: Run dotnet build
         run: dotnet build --configuration ${{ matrix.configuration }}
