--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -35,17 +35,21 @@ jobs:
 
       - run: dotnet restore --locked-mode
 
-      - run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
+      - name: Disable DNNE exports building for Linux on Windows host
+        run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
         if: ${{ (matrix.os == 'windows-latest') && (matrix.forced_runtime_identifier != 'win-x64') }}
 
-      - run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
+      - name: Disable DNNE exports building for Windows on Linux host
+        run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
         if: ${{ (matrix.os == 'ubuntu-latest') && (matrix.forced_runtime_identifier != 'linux-x64') }}
 
-      - run: echo "DNNE_BUILD_EXPORTS=true" >> $GITHUB_ENV
+      - name: Enable DNNE exports building if not disabled explicitly
+        run: echo "DNNE_BUILD_EXPORTS=true" >> $GITHUB_ENV
         if: env.DNNE_BUILD_EXPORTS == '' || env.DNNE_BUILD_EXPORTS == null
 
       - run: echo "DNNE_BUILD_EXPORTS=$DNNE_BUILD_EXPORTS"
       - run: echo "DNNE_BUILD_EXPORTS=${{ env.DNNE_BUILD_EXPORTS }}"
+      - run: echo "GITHUB_ENV=$GITHUB_ENV"
 
       - name: Run dotnet build
         run: dotnet build --configuration ${{ matrix.configuration }}
