--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,5 +1,9 @@
 ﻿name: Build dotnet project
 
+defaults:
+  run:
+    shell: pwsh
+
 on:
   push:
     branches:
@@ -36,20 +40,19 @@ jobs:
       - run: dotnet restore --locked-mode
 
       - name: Disable DNNE exports building for Linux on Windows host
-        run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
+        run: echo "DNNE_BUILD_EXPORTS=false" >> $env:GITHUB_ENV
         if: ${{ (matrix.os == 'windows-latest') && (matrix.forced_runtime_identifier != 'win-x64') }}
 
       - name: Disable DNNE exports building for Windows on Linux host
-        run: echo "DNNE_BUILD_EXPORTS=false" >> $GITHUB_ENV
+        run: echo "DNNE_BUILD_EXPORTS=false" >> $env:GITHUB_ENV
         if: ${{ (matrix.os == 'ubuntu-latest') && (matrix.forced_runtime_identifier != 'linux-x64') }}
 
       - name: Enable DNNE exports building if not disabled explicitly
-        run: echo "DNNE_BUILD_EXPORTS=true" >> $GITHUB_ENV
+        run: echo "DNNE_BUILD_EXPORTS=true" >> $env:GITHUB_ENV
         if: env.DNNE_BUILD_EXPORTS == '' || env.DNNE_BUILD_EXPORTS == null
 
-      - run: echo "DNNE_BUILD_EXPORTS=$DNNE_BUILD_EXPORTS"
+      - run: echo "DNNE_BUILD_EXPORTS=$env:DNNE_BUILD_EXPORTS"
       - run: echo "DNNE_BUILD_EXPORTS=${{ env.DNNE_BUILD_EXPORTS }}"
-      - run: echo "GITHUB_ENV=$GITHUB_ENV"
 
       - name: Run dotnet build
         run: dotnet build --configuration ${{ matrix.configuration }}
