--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -15,4 +15,8 @@
     <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' And '$(ForcedRuntimeIdentifier)' == 'win-x64' ">
         <DnneBuildExports>false</DnneBuildExports>
     </PropertyGroup>
+
+    <PropertyGroup>
+        <EmitDnnePlatformSourceToOutDir>false</EmitDnnePlatformSourceToOutDir>
+    </PropertyGroup>
 </Project>
